<resources>
    <string name="app_name">Pesaing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="category_name">
        <item>Sayur</item>
        <item>Buah</item>
        <item>Daging</item>
        <item>Bumbu</item>
        <item>Ikan</item>
        <item>Ayam</item>
        <item>Kue</item>
    </string-array>

    <integer-array name="category_img">
        <item>@drawable/sayur</item>
        <item>@drawable/buah</item>
        <item>@drawable/daging</item>
        <item>@drawable/bumbu</item>
        <item>@drawable/ikan</item>
        <item>@drawable/ayam</item>
        <item>@drawable/kue</item>
    </integer-array>

    <integer-array name="toko_sekitar_img">
        <item>@drawable/toko1</item>
        <item>@drawable/toko2</item>
        <item>@drawable/toko3</item>
    </integer-array>

    <string name="txt_pre_login">Untuk Melanjutkan Daftar dulu yukk!</string>
    <string name="txt_pre_login2">Jika sudah memiliki akun</string>
    <string name="btn_daftar">Daftar</string>
    <string name="txt_to_login"><u>Login</u></string>
    <string name="email_string">Email</string>
    <string name="password_string">Password</string>
    <string name="masuk_string">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="nama_string">Nama</string>
    <string name="nomor_telepon_string">Nomor Telepon</string>
    <string name="finish_register_title">Anda berhasil terdaftar!</string>
    <string name="finish_register_sub">Yuk lanjut masuk ke aplikasi nya!</string>
    <string name="masuk_sekarang_string">Masuk Sekarang</string>
    <string name="motd_main">Mau masak apa hari ini?</string>
    <string name="kategori">Kategori</string>
    <string name="toko_sekitar">Toko Sekitar</string>
    <string name="title_home">Beranda</string>
    <string name="title_akun">Akun</string>
    <string name="title_cart">Keranjang</string>
    <string name="title_history">Sejarah</string>
    <string name="account_title">Akunku</string>
    <string name="open_store">Buka Toko</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="change_password">Ganti Password</string>
    <string name="logout_profile">Keluar/ganti akun</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="search_query_hint"><font size="15">Cari apa yang kamu pikirkan…</font></string>
    <string name="nama_toko">Nama Toko</string>
    <string name="latlon">lat, lon</string>
    <string name="cek_toko">Cek Toko</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="stok">Stok :</string>
    <string name="jumlah_stok">Jumlah Stok</string>
    <string name="stok_jumlah">Stok Jumlah</string>
    <string name="harga">Rp</string>
    <string name="nama_akun">Nama Akun</string>
    <string name="buat_toko_baru">Buat Toko Baru</string>
    <string name="buat_toko">Buat Toko</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="ingin_tambah_barang">Ingin Tambah Barang?</string>
    <string name="tambahkan_barang">Tambahkan Barang</string>
    <string name="daftar_barang">Daftar Barang</string>
    <string name="tambah_barang_title">Tambah Barang</string>
    <string name="harga_text">Harga</string>
    <string name="gambar_text">Gambar</string>
    <string name="add_image_symbol">+</string>
    <string name="choose_a_picture">Pilih Foto</string>
    <string name="favorit">Favorit</string>
</resources>