<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="10dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_barang"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitXY"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_barang_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/img_barang"
            app:layout_constraintTop_toTopOf="@id/img_barang"
            android:text="@string/nama_barang"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_barang_stok_label"
            android:labelFor="@id/tv_barang_stok_jumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/tv_barang_nama"
            app:layout_constraintTop_toBottomOf="@id/tv_barang_nama"
            android:text="@string/stok"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_barang_stok_jumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            app:layout_constraintStart_toEndOf="@id/tv_barang_stok_label"
            app:layout_constraintTop_toTopOf="@id/tv_barang_stok_label"
            android:text="@string/stok_jumlah"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/barang_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_barang_stok_label"
            app:layout_constraintBottom_toBottomOf="@id/img_barang"
            android:text="@string/harga"
            android:textSize="16sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>