<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.tokopanel.AddTokoItemFragment">

    <TextView
        android:id="@+id/tv_tambah_barang_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tambah_barang_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_item_textInputLayout"
        style="@style/OutlinedRoundedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/nama_barang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_top_add_item">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_nama_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/jumlah_stok_textInputLayout"
        style="@style/OutlinedRoundedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:hint="@string/jumlah_stok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_item_textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_jumlah_stok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/harga_textInputLayout"
        style="@style/OutlinedRoundedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:hint="@string/harga_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jumlah_stok_textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_gambar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/gambar_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/harga_textInputLayout"
        app:layout_constraintTop_toBottomOf="@id/harga_textInputLayout" />

    <ImageView
        android:id="@+id/img_item_barang"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/no_image"
        app:layout_constraintEnd_toEndOf="@id/harga_textInputLayout"
        app:layout_constraintStart_toStartOf="@id/tv_gambar_title"
        app:layout_constraintTop_toBottomOf="@id/tv_gambar_title"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_item_barang"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_image_item"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_item_barang"
        app:layout_constraintEnd_toEndOf="@id/img_item_barang"
        android:text="@string/add_image_symbol"
        android:textSize="20sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_item"
        style="@style/OutlinedRoundedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_top_button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/tambahkan_barang"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

</androidx.constraintlayout.widget.ConstraintLayout>