<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.tokopanel.TokoPanelFragment">

    <TextView
        android:id="@+id/tv_title_toko_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/nama_toko"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/toko_img_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_toko_panel" />

    <TextView
        android:id="@+id/tv_tambah_barang_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingin_tambah_barang"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_left_toko_panel"
        app:layout_constraintTop_toBottomOf="@id/guideline_top_tambah_barang" />

    <com.google.android.material.button.MaterialButton
        style="@style/OutlinedRoundedBox"
        android:id="@+id/btn_tambah_barang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tambah_barang_title"
        app:layout_constraintStart_toStartOf="@id/guideline_left_toko_panel"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_toko_panel"
        android:text="@string/tambahkan_barang" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_tambah_barang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left_toko_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right_toko_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <TextView
        android:id="@+id/tv_daftar_barang_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_left_toko_panel"
        app:layout_constraintTop_toBottomOf="@id/btn_tambah_barang"
        android:layout_marginTop="30dp"
        android:text="@string/daftar_barang"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_daftar_barang_title"
        app:layout_constraintStart_toStartOf="@id/guideline_left_toko_panel"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_toko_panel"
        tools:listitem="@layout/barang_item"/>

</androidx.constraintlayout.widget.ConstraintLayout>