<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.tokopanel.CreateTokoFragment">

    <TextView
        android:id="@+id/tv_title_create_toko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/buat_toko_baru"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_create_toko"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_create_toko"
        app:layout_constraintBottom_toTopOf="@id/guideline_top_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/toko_img_placeholder"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nama_toko_textInputLayout"
        style="@style/OutlinedRoundedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/nama_toko"
        app:startIconDrawable="@drawable/ic_outline_store_24"
        app:layout_constraintTop_toBottomOf="@id/guideline_top_form"
        app:layout_constraintBottom_toTopOf="@id/latitude_toko_textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_nama_toko"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/latitude_toko_textInputLayout"
        style="@style/OutlinedRoundedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/latitude"
        app:startIconDrawable="@drawable/ic_outline_location_24"
        app:layout_constraintTop_toBottomOf="@id/nama_toko_textInputLayout"
        app:layout_constraintBottom_toTopOf="@id/longitude_toko_textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_latitude_toko"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/longitude_toko_textInputLayout"
        style="@style/OutlinedRoundedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/longitude"
        app:startIconDrawable="@drawable/ic_outline_location_24"
        app:layout_constraintTop_toBottomOf="@id/latitude_toko_textInputLayout"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom_form">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_longitude_toko"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/OutlinedRoundedBox"
        android:id="@+id/btn_create_toko"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/buat_toko"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>